// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteComment should match latest snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID) {
        deleteComment(id: $id) {
          success
        }
      }",
    "variables": Object {
      "id": "1",
    },
  },
  "meta": Object {
    "id": "1",
    "optimistic": true,
  },
  "type": "Comment/DELETE_COMMENT",
}
`;

exports[`updateComment should match latest snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID, $data: CommentInput) {
        updateComment(id: $id, data: $data) {
          id
          text
        }
      }",
    "variables": Object {
      "data": Object {
        "text": "lalalala",
      },
      "id": "1",
    },
  },
  "meta": Object {
    "data": Object {
      "text": "lalalala",
    },
    "id": "1",
    "optimistic": true,
  },
  "type": "Comment/UPDATE_COMMENT",
}
`;
